--- a/index.html
+++ b/index.html
@@ -135,7 +135,31 @@
             <button id="loginBtn">Login</button>
             <div id="loginMessage" style="margin-top: 15px;"></div>
         </section>
+<!-- Admission Section -->
+<section class="admission-section container">
+    <div class="admission-content">
+        <h2 class="admission-title">🎓 Admission Open 2025</h2>
+        <p class="admission-text">
+            Click below to see full admission details.
+        </p>
+        <button class="admission-btn" id="openAdmissionBtn">Click Here</button>
+    </div>
+</section>
 
+<!-- Modal -->
+<div id="admissionModal" class="admission-modal">
+    <div class="admission-modal-content">
+        <span class="admission-close">&times;</span>
+        <h3>Admission Details 2025</h3>
+        <div class="admission-info">
+            <p><strong>Class Timings:</strong> 8:00 AM - 2:00 PM</p>
+            <p><strong>Available Seats:</strong> Nursery to Class XII</p>
+            <p><strong>Exam Date:</strong> 15th September 2025</p>
+            <p><strong>Reporting Time:</strong> 7:30 AM</p>
+            <p><strong>Contact:</strong> +91 9876543210</p>
+        </div>
+    </div>
+</div>
         <!-- Admin Panel -->
         <section class="admin-panel" id="adminPanel">
             <div class="admin-header">
