--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             </div>
             <button id="loginBtn">Login</button>
             <div id="loginMessage" style="margin-top: 15px;"></div>
-        </section>
-<!-- Admission Section -->
+            <!-- Admission Section -->
 <section class="admission-section container">
     <div class="admission-content">
         <h2 class="admission-title">🎓 Admission Open 2025</h2>
@@ -159,7 +158,9 @@
             <p><strong>Contact:</strong> +91 9876543210</p>
         </div>
     </div>
-</div>
+</div
+        </section>
+
         <!-- Admin Panel -->
         <section class="admin-panel" id="adminPanel">
             <div class="admin-header">
