--- a/index.html
+++ b/index.html
@@ -152,13 +152,32 @@
         <h3>Admission Details 2025</h3>
         <div class="admission-info">
             <p><strong>Class Timings:</strong> 8:00 AM - 2:00 PM</p>
-            <p><strong>Available Seats:</strong> Nursery to Class XII</p>
-            <p><strong>Exam Date:</strong> 15th September 2025</p>
+            <p><strong>Available Seats:</strong> Nursery to Class X</p>
+            <p><strong>Exam Date:</strong> 22 September 2025</p>
             <p><strong>Reporting Time:</strong> 7:30 AM</p>
-            <p><strong>Contact:</strong> +91 9876543210</p>
+            <p><strong>Contact:</strong> +91 8084873902</p>
         </div>
     </div>
 </div
+        </section>
+        <section id="upcoming" class="upcoming-section">
+  <div class="container">
+    <h2 class="section-title">Upcoming Events</h2>
+    <div class="upcoming-cards">
+      <div class="card">
+        <h3>Admin panel</h3>
+        <p>1 January 2026</p>
+      </div>
+      <div class="card">
+        <h3>Check topper list</h3>
+        <p>1 January 2026</p>
+      </div>
+      <div class="card">
+        <h3>Add Others features</h3>
+        <p>1 January 2026</p>
+      </div>
+    </div>
+  </div>
         </section>
 
         <!-- Admin Panel -->
