--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁶u<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -134,6 +134,7 @@
             </div>
             <button id="loginBtn">Login</button>
             <div id="loginMessage" style="margin-top: 15px;"></div>
+        </section>
             <!-- Admission Section -->
 <section class="admission-section container">
     <div class="admission-content">
