--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <!-- Admin Panel -->
         <section class="admin-panel" id="adminPanel">
             <div class="admin-header">
-                <h2 class="admin-title">Admin Panel</h2>
+                <h2 class="admin-title">PKSSS</h2>
                 <button class="logout-btn" id="logoutBtn">Logout</button>
             </div>
             
@@ -323,7 +323,7 @@
             <span class="detail-value" id="acRoll">-</span>
         </div>
         <div class="detail-item">
-            <span class="detail-label">Date of Birth:</span>
+            <span class="detail-label">DOB:</span>
             <span class="detail-value" id="acDob">-</span>
         </div>
         <div class="detail-item">
