--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="student-icon">
                 <i class="fas fa-user-graduate"></i>
             </div>
-            <h2 class="login-title">Official Login</h2>
+            <h2 class="login-title">ONLY PKSSS</h2>
             <div class="form-group">
                 <label for="username"
                 >👤Username</label>
@@ -172,7 +172,7 @@
                 <div class="admission-info">
                     <p><strong>Class Timings:</strong> 8:00 AM - 2:00 PM</p>
                     <p><strong>Available Seats:</strong> Nursery to Class X</p>
-                    <p><strong>Exam Date:</strong> 22 September 2025</p>
+                    <p><strong>Exam Date:</strong> Next Exam Coming Soon...</p>
                     <p><strong>Reporting Time:</strong> 7:30 AM</p>
                     <p><strong>Contact:</strong> +91 8084873902</p>
                 </div>
@@ -204,7 +204,7 @@
                     </div>
                     <div class="form-row">
                         <button class="upload-btn" id="uploadResultBtn">Upload</button>
-                        <button class="remove-btn" id="removeResultBtn">Remove</button>
+                        <button class="remove-btn" id="removeResultBtn">Remove All</button>
                     </div>
                 </div>
                 
@@ -239,14 +239,14 @@
                         <label for="examCenter">Select Center</label>
                         <select id="examCenter">
                             <option value="">Select Center</option>
-                            <option value="Mundeshwari">Mundeshwari</option>
-                            <option value="Umapur">Umapur</option>
-                            <option value="Shahpur">Shahpur</option>
-                            <option value="Masahi">Masahi</option>
-                            <option value="Ramgarh">Ramgarh</option>
-                            <option value="Bhagwanpur">Bhagwanpur</option>
-                            <option value="Bhabhua">Bhabhua</option>
-                            <option value="Saraiya">Saraiya</option>
+                            <option value="Mundeshwari">MUNDESHWARI</option>
+                            <option value="Umapur">UMAPUR</option>
+                            <option value="Shahpur">SHAHAPUR</option>
+                            <option value="Masahi">MASHAHI</option>
+                            <option value="Ramgarh">RAMGARH</option>
+                            <option value="Bhagwanpur">BHAGWANPUR</option>
+                            <option value="Bhabhua">BHABHUA</option>
+                            <option value="Saraiya">SARAIYA</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -262,7 +262,7 @@
                     </div>
                     <div class="form-row">
                         <button class="upload-btn" id="uploadAdmitBtn">Upload</button>
-                        <button class="remove-btn" id="removeAdmitBtn">Remove</button>
+                        <button class="remove-btn" id="removeAdmitBtn">Remove All</button>
                     </div>
                 </div>
                 
@@ -283,7 +283,7 @@
                     </div>
                     <div class="form-row">
                         <button class="upload-btn" id="uploadTopperBtn">Upload</button>
-                        <button class="remove-btn" id="removeTopperBtn">Remove</button>
+                        <button class="remove-btn" id="removeTopperBtn">Remove All</button>
                     </div>
                 </div>
             </div>
