--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                     </div>
                 </div>
                 
-                <!-- Upload Dummy Card -->
+                <!-- Upload Admit Card -->
                 <div class="admin-card">
-                    <h3 class="admin-card-title">Upload Dummy Card</h3>
+                    <h3 class="admin-card-title">Upload Admit Card</h3>
                     <div class="form-group">
                         <label for="admitCardName">Student Name</label>
                         <input type="text" id="admitCardName" placeholder="Full Name">
