--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         <section class="topper-section">
             <div class="section-header">
                 <h2 onclick="toggleTopperList()" style="cursor: pointer;">🏆 School Toppers</h2>
-                <p>Click to view top performing students टॉपर लिस्ट देखने के लिए स्कूल टॉपर पर क्लिक करें...👆</p>
+                <p>Click to view top performing students...
+                    टॉपर लिस्ट देखने के लिए स्कूल टॉपर पर क्लिक करें...👆</p>
             </div>
             <div class="topper-list-container" id="topperListContainer" style="display: none;">
                 <div class="topper-stats">
